Fixed the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>From monoliths to components with D3</title>
     <meta charset="utf-8">
     <script src="lib/d3.js"></script>
     <script src="lib/css-layout.js"></script>
